--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "firebase": "^10.12.5",
     "js-cookie": "^3.0.5",
     "preline": "^2.4.1",
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "secret_chat": "file:",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
   },
